writing-a-c-compiler-tests/tests/chapter_1/invalid_parse/invalid_function_name.c
 int 3 (void) {
    return 0;
}